logs/offboard_pkg/build.make.050.log.stderr
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:2:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:77:14: error: ISO C++ forbids declaration of ‘CallLand’ with no type [-fpermissive]
   77 |     CallLand();
      |              ^
make[2]: *** [CMakeFiles/main.dir/build.make:63: CMakeFiles/main.dir/src/main.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:77:14: error: ISO C++ forbids declaration of ‘CallLand’ with no type [-fpermissive]
   77 |     CallLand();
      |              ^
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp: In member function ‘bool TaskManager::is_GPS_succuss(Eigen::Vector3d&)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:202:1: warning: no return statement in function returning non-void [-Wreturn-type]
  202 | }
      | ^
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp: At global scope:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:216:6: error: no declaration matches ‘void TaskManager::CallLand()’
  216 | void TaskManager::CallLand()
      |      ^~~~~~~~~~~
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:77:5: note: candidate is: ‘int TaskManager::CallLand()’
   77 |     CallLand();
      |     ^~~~~~~~
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:15:7: note: ‘class TaskManager’ defined here
   15 | class TaskManager
      |       ^~~~~~~~~~~
make[2]: *** [CMakeFiles/main.dir/build.make:76: CMakeFiles/main.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:723: CMakeFiles/main.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
